--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "sigsum-ts",
-  "version": "0.1",
+  "name": "sigsum",
+  "version": "0.1.0",
   "description": "A Sigsum proof verifier for the browser.",
-  "main": "dist/index.js",
+  "main": "dist/verify.js",
+  "types": "dist/verify.d.ts",
   "scripts": {
     "build": "tsc",
     "test": "vitest run",
@@ -20,9 +21,7 @@
   "license": "MIT",
   "devDependencies": {
     "typescript": "^5.8.3",
-    "vitest": "^3.2.4"
-  },
-  "dependencies": {
+    "vitest": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "typescript-eslint": "^8.37.0"
