--- a/.github/workflows/auto-bump.yml
+++ b/.github/workflows/auto-bump.yml
@@ -2,7 +2,7 @@ name: Auto Bump Dependencies
 
 on:
   schedule:
-    - cron: '0 4 * * *'  # Run every day at 04:00 UTC
+    - cron: "0 4 * * *" # Run every day at 04:00 UTC
   workflow_dispatch:
 
 jobs:
@@ -41,7 +41,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add package.json package-lock.json
           git diff --cached --quiet || git commit -m "chore: bump dependencies and apply audit fix"
-        continue-on-error: true  # Skip if no changes
+        continue-on-error: true # Skip if no changes
 
       - name: Run tests on updated deps
         id: test
@@ -62,4 +62,3 @@ jobs:
             Dependencies were updated and `npm audit fix` was run, but tests failed.
             Please investigate and merge manually.
           commit-message: "chore: bump dependencies and audit fix (tests failed)"
-
