--- a/.github/workflows/auto-bump.yml
+++ b/.github/workflows/auto-bump.yml
@@ -21,16 +21,17 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install dependencies
-        run: npm ci
-
       - name: Install npm-check-updates
         run: npm install -g npm-check-updates
 
       - name: Bump dependencies
         run: |
-          ncu -u
-          npm install
+          # Upgrade while considering peer constraints to avoid TS/ESLint clashes
+          ncu -u --peer
+          # ncu -u --reject '/^typescript$/'
+
+      - name: Install updated deps
+        run: npm install
 
       - name: Run npm audit fix
         run: npm audit fix || true
@@ -41,11 +42,11 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add package.json package-lock.json
           git diff --cached --quiet || git commit -m "chore: bump dependencies and apply audit fix"
-        continue-on-error: true # Skip if no changes
+        continue-on-error: true
 
       - name: Run tests on updated deps
         id: test
-        run: npm run test
+        run: npm test
         continue-on-error: true
 
       - name: If tests pass, push to main
