--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "test": "vitest run",
     "coverage": "vitest run --coverage",
-    "lint": "npx eslint . --fix && npx prettier --write ."
+    "lint": "npx eslint . --fix && npx prettier --write .",
+    "clean": "rm -rf dist/*"
   },
   "keywords": [
     "sigsum",
@@ -23,10 +24,13 @@
   "repository": "github:freedomofpress/sigsum-ts",
   "bugs": "https://github.com/freedomofpress/sigsum-ts/issues",
   "devDependencies": {
-    "typescript": "^5.9.3",
-    "vitest": "^4.0.6",
-    "@vitest/coverage-v8": "^4.0.6",
+    "@vitest/coverage-v8": "^4.0.5",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "typescript-eslint": "^8.46.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.2",
+    "vitest": "^4.0.5"
+  },
+  "dependencies": {
+    "yargs": "^18.0.0"
   }
 }
