--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,11 +6,11 @@ on:
       - "v*.*.*"
 
 jobs:
-  run-conformance:
+  run-tests:
     uses: ./.github/workflows/test.yml
 
   publish:
-    needs: run-conformance
+    needs: run-tests
     runs-on: ubuntu-latest
 
     if: startsWith(github.ref, 'refs/tags/v')
